<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <PreferenceCategory
        android:title="@string/pref_general_locationCategory"
        android:key = "pref_general_locationCategory">

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key = "@string/pref_location_key"
            android:defaultValue= "@string/pref_default_value"
            android:inputType="text"
            android:singleLine="true"
            />

         <ListPreference
            android:dependency="pref_general_locationCategory"
            android:key="@string/pref_general_TempTypeKey"
            android:title="@string/pref_general_TempType"
            android:dialogTitle="@string/pref_general_TempType"
            android:entries="@array/pref_temperature_entries"
            android:entryValues="@array/pref_temperature_values"
            android:defaultValue="@string/pref_general_TempUnits_default" />


    </PreferenceCategory>


</PreferenceScreen>